# Verified-DICE-for-STM32H7

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  build.sh  build_unverified_dice_image_binary.sh  build_verified_dice_image_binary.sh  cgmanifest.json  copy-dice-star-code.sh  experiment_verified.sh  flash_and_run_unverified_dice.sh  flash_and_run_verified_dice.sh  index.md
cgmanifests/submodules/: cgmanifest.json
cmake/: build_options.cmake  common.cmake  definitions.cmake  git_version.cmake  install.cmake  toolchain_arm.cmake  toolchain_host.cmake  versions.cmake
patches/: kremlin_firmware_fixes.patch
scripts/: flash.sh  protections-clear.sh  protections-set-rdp1.sh  protections-set-rdp2.sh  settings.jlink
src/: CMakeLists.txt  README.md
src/common/: Blob.h  Buffer.h  CMakeLists.txt  HWAbstraction.c  LowLevelOutput.h  cert_constants.h  cert_types.h  common.cpp  common.h  errors.h  id_types.h  locking.c  locking.h  logger.cpp  logger.h  machine.c  machine.h  rng.h  target_logger.h  testing.h  threading.h  timing.h  xoroshiro128plus.cpp  xoroshiro128plus.h
src/common/arm/: CMakeLists.txt  machine_time.c  rng.c  target_logger.cpp
src/common/host/: CMakeLists.txt  machine_time.cpp  rng.c  target_logger.cpp
src/common/tests/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  README.md  l0_params.h  l1_params.h
src/core/dice_engine/: CMakeLists.txt  challenge.h  dice_engine.c  dice_engine.h
src/core/dice_engine/arm/: CMakeLists.txt
src/core/dice_engine/host/: CMakeLists.txt
src/core/l0_engine/: CMakeLists.txt  l0_engine.c  l0_engine.h
src/core/l0_engine/arm/: CMakeLists.txt
src/core/l0_engine/host/: CMakeLists.txt
src/crypto/: CMakeLists.txt  ImageSigning.cpp  ImageSigning.h  crypto.c  crypto.h  crypto_config.h  crypto_files.cpp  crypto_files.h  cryptotypes.h
src/crypto/arm/: CMakeLists.txt
src/crypto/host/: CMakeLists.txt
src/fw/: CMakeLists.txt  README.md  option_bytes.md  option_bytes_rdp_1.csv  option_bytes_rdp_2.csv
src/fw/DICE_Image/: CMakeLists.txt  DICE_main.c  DICE_main.h  protections.h  reset.c  reset.h  secret.c  secret.h
src/fw/DICE_Image/arm/: CMakeLists.txt  STM32H753ZITx_DICE.ld  main.c  protections.c  reset.c  rss_definitions.h  secret_storage.c
src/fw/DICE_Image/host/: CMakeLists.txt  DICE_main_host.h  main.c  protections.c  reset.c  secret_storage.c
src/fw/L0_Image/: CMakeLists.txt  l0_main.c  l0_main.h
src/fw/L0_Image/arm/: CMakeLists.txt  STM32H753ZITx_L0.ld  main.c
src/fw/L0_Image/host/: CMakeLists.txt  l0_main_host.h  main.c
src/fw/L1_Image/: CMakeLists.txt  l1_main.c  l1_main.h  menu.h  tests.c  tests.h
src/fw/L1_Image/arm/: CMakeLists.txt  STM32H753ZITx_L1.ld  main.c  menu.c
src/fw/L1_Image/host/: CMakeLists.txt  l1_main_host.h  main.c  menu.c
src/fw/arm/: CMakeLists.txt  generate_binary_image.cmake  generate_layer_keys.cmake
src/fw/arm/libstmhal/: CMakeLists.txt
src/fw/common/: CMakeLists.txt  firmware_auth.c  firmware_auth.h  flash.h  hw_info.h  image_auth.c  image_auth.h  image_header.h  log_ram.c  log_ram.h  memmap.h  option_bytes.h  shared_mem_persistent.c  shared_mem_persistent.h  shared_mem_volatile.h  system_reset.h  watchdog.h
src/fw/common/arm/: CMakeLists.txt  STM32H753ZITx.ld  backup_sram.c  backup_sram.h  error_handler.c  exception_pins.c  flash.c  hw_info.c  hw_rng.c  hw_rng.h  image_launch.c  image_launch.h  image_launch_asm.s  memmap.c  memmap_flash.ld  memmap_h7.h  memmap_ram.ld  option_bytes.c  ready_flag.c  ready_flag.h  startup_stm32h753xx.s  syscalls.c  system_reset.c  system_setup.c  system_setup.h  system_stm32h7xx.c  uart.c  uart.h  watchdog.c
src/fw/common/host/: CMakeLists.txt  exception_pins.c  flash.c  hw_info.c  memmap.c  option_bytes.c  system_reset.c  watchdog.c
src/fw/config/: stm32h7xx_hal_conf.h
src/fw/headertool/: CMakeLists.txt  header_utils.c  header_utils.h  main.c
src/fw/keymanifesttool/: CMakeLists.txt  main.cpp
src/fw/keytool/: CMakeLists.txt  main.c
src/fw/signtool/: CMakeLists.txt  main.c
src/fw/tests/: CMakeLists.txt  fw_tests.cpp
src/global/: .gitignore  CMakeLists.txt  crypto_defs.h  timeouts.h  version.h.in
src/kremlib/: CMakeLists.txt
src/kremlib/arm/: CMakeLists.txt
src/kremlib/host/: CMakeLists.txt
